# VirtualContestRust

./: Cargo.toml  compete.toml
6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b/: Cargo.toml
6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b/testcases/: 0.yml  1.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml
