[package]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-0 = { alias = "0", problem = "https://atcoder.jp/contests/abc330/tasks/abc330_a" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-1 = { alias = "1", problem = "https://atcoder.jp/contests/abc209/tasks/abc209_c" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-2 = { alias = "2", problem = "https://atcoder.jp/contests/abc046/tasks/abc046_b" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-3 = { alias = "3", problem = "https://atcoder.jp/contests/abc218/tasks/abc218_e" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-4 = { alias = "4", problem = "https://atcoder.jp/contests/abc191/tasks/abc191_e" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-5 = { alias = "5", problem = "https://atcoder.jp/contests/abc167/tasks/abc167_f" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-6 = { alias = "6", problem = "https://atcoder.jp/contests/abc212/tasks/abc212_g" }
contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-7 = { alias = "7", problem = "https://atcoder.jp/contests/abc306/tasks/abc306_g" }

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-0"
path = "src/bin/0.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-1"
path = "src/bin/1.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-2"
path = "src/bin/2.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-3"
path = "src/bin/3.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-4"
path = "src/bin/4.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-5"
path = "src/bin/5.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-6"
path = "src/bin/6.rs"

[[bin]]
name = "contest6e18b9d1-fb64-47f5-a254-59cdd5e9ec9b-7"
path = "src/bin/7.rs"

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=3.14.2", features = ["c_raw", "rand", "stringly_conversions"] }
amplify_derive = "=2.11.3"
amplify_num = { version = "=0.4.1", features = ["std"] }
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
# 202004から続投:
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.5", features = ["derive"] }
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = { version = "=1.11.0", features = ["const_generics", "const_new", "write", "union", "serde", "arbitrary"] }

[dev-dependencies]
